// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputAddon.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-addon"
  >
    <span
      class="t-addon__prepend"
    >
      http://
    </span>
    <div
      class="t-input"
    >
      <input
        class="t-input__inner"
        placeholder="请输入域名"
        value=""
      />
    </div>
  </div>
  <div
    class="t-addon"
  >
    <span
      class="t-addon__prepend"
    >
      http://
    </span>
    <div
      class="t-input"
    >
      <input
        class="t-input__inner"
        placeholder="请输入域名"
        value=""
      />
    </div>
    <span
      class="t-addon__append"
    >
      .com
    </span>
  </div>
</DocumentFragment>
`;

exports[`InputBasic.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-input"
  >
    <input
      class="t-input__inner"
      placeholder="请输入内容"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`InputDisabled.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-input t-is-disabled"
  >
    <input
      class="t-input__inner"
      disabled=""
      placeholder="请输入内容"
      value="禁用状态"
    />
  </div>
</DocumentFragment>
`;

exports[`InputFocus.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-input"
  >
    <input
      class="t-input__inner"
      placeholder="请输入内容"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`InputGroup.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-input-group"
  >
    <div
      class="t-input"
    >
      <input
        class="t-input__inner"
        placeholder="姓"
        value=""
      />
    </div>
    <div
      class="t-input"
    >
      <input
        class="t-input__inner"
        placeholder="名"
        value=""
      />
    </div>
  </div>
  <br />
  <br />
  <div
    class="t-input-group t-input-group--seperate"
  >
    <div
      class="t-input"
    >
      <input
        class="t-input__inner"
        placeholder="姓"
        value=""
      />
    </div>
    <div
      class="t-input"
    >
      <input
        class="t-input__inner"
        placeholder="名"
        value=""
      />
    </div>
  </div>
   
</DocumentFragment>
`;

exports[`InputIcon.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-input t-input--prefix t-input--suffix"
  >
    <span
      class="t-input__prefix"
    >
      <span
        class="t-icon t-icon-middle"
      >
        <svg
          class="t-icon t-icon-search"
        >
          <use
            xlink:href="#t-icon-search"
          />
        </svg>
      </span>
    </span>
    <input
      class="t-input__inner"
      placeholder="请输入内容"
      value=""
    />
    <span
      class="t-input__suffix"
    >
      <span
        class="t-icon t-icon-middle"
      >
        <svg
          class="t-icon t-icon-prompt-fill"
        >
          <use
            xlink:href="#t-icon-prompt-fill"
          />
        </svg>
      </span>
    </span>
  </div>
  <br />
  <br />
  <div
    class="t-input t-input--prefix t-input--suffix"
  >
    <span
      class="t-input__prefix"
    >
      icon
    </span>
    <input
      class="t-input__inner"
      placeholder="请输入内容"
      value=""
    />
    <span
      class="t-input__suffix"
    >
      <span
        class="t-icon t-icon-middle"
      >
        <svg
          class="t-icon t-icon-prompt-fill"
        >
          <use
            xlink:href="#t-icon-prompt-fill"
          />
        </svg>
      </span>
    </span>
  </div>
</DocumentFragment>
`;

exports[`InputSize.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-input t-size-l"
  >
    <input
      class="t-input__inner"
      placeholder="请输入内容"
      value=""
    />
  </div>
  <br />
  <br />
  <div
    class="t-input"
  >
    <input
      class="t-input__inner"
      placeholder="请输入内容"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`InputStatus.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-input t-is-success"
  >
    <input
      class="t-input__inner"
      placeholder="成功状态"
      value=""
    />
  </div>
  <br />
  <br />
  <div
    class="t-input t-is-warning"
  >
    <input
      class="t-input__inner"
      placeholder="警告状态"
      value=""
    />
  </div>
  <br />
  <br />
  <div
    class="t-input t-is-error"
  >
    <input
      class="t-input__inner"
      placeholder="错误状态"
      value=""
    />
  </div>
</DocumentFragment>
`;
